--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,10 +16,10 @@ body {
 
 header {
     background-color: var(--cor1);
-    padding: 20px;
     box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     display: flex; 
     flex-flow: row;
+    flex-wrap: wrap;
 }
 
 main {
@@ -37,55 +37,82 @@ footer {
     box-shadow:0 -10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
-/*HEADER: mais definições*/
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+h1 {
+    color: var(--cor4);
 }
-
-nav li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-nav a {
-    text-decoration: none;
-    color: #333;
-}
-
-.container-foto-perfil {
-    margin-right: 20px;
-}
-
-.foto-perfil {
-    width: 100px;
-    /*box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);*/
-    border: white solid;
-    box-sizing: border-box;
-}
-/*HEADER: end*/
-
 
 h2 {
     margin: 20px 0;
     color: var(--cor2);
 }
 
-.projeto {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-.projeto img {
+/*HEADER: mais definições*/
+.container-foto-perfil {
+    /*margin-right: 20px;*/
     width: 100%;
-    height: auto;
-    margin-bottom: 10px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
 }
 
+.foto-perfil {
+    width: 100px;
+    /*box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);*/
+    border: 5px solid var(--cor4);
+    border-radius: 5%;
+    box-sizing: border-box;
+    float: left;
+    margin-right: 20px;
+}
 
-/* GRID DO PORTFÓLIO */
+.container-menu {
+    width: 100%;
+}
+/*HEADER: end*/
+
+/* NAV MENU: início */
+.topnav {
+    overflow: hidden;
+    background-color: var(--cor4);
+    border-top: 3px solid var(--cor5);
+    position: relative;
+    z-index: 1; /* Adicionado para garantir que o menu esteja acima de outros elementos */
+}
+  
+.topnav a {
+    float: left;
+    display: block;
+    color: var(--cor1);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.icon {
+    color: blue;
+    background-color: var(--cor4);
+}
+
+/* MENU ITEMS COLORS */
+.topnav a:hover {
+    background-color: var(--cor2);
+    color: var(--cor4);
+}
+/* MENU ITEMS COLORS */
+.topnav a.active {
+    background-color: var(--cor5);
+    color: var(--cor4);
+    font-weight: 900;
+}
+  
+.topnav .icon {
+    display: none;
+}
+/* NAV MENU: fim */
+
+
+/* GRID DO PORTFÓLIO: início */
 .grid-container-portfolio {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -106,15 +133,10 @@ h2 {
 .grid-container-portfolio > div:hover {
     transform: translateY(-10px);
 }
+/* GRID DO PORTFÓLIO: fim */
 
-@media (max-width: 800px) {
-    .grid-container-portfolio {
-        grid-template-columns: auto;
-    }
-}
 
-/* CARDS DO PORTFÓLIO */
-
+/* CARDS DO PORTFÓLIO: início*/
 .back-top {
     background-color: var(--cor4);
     border-radius: 20px 20px 0 0;
@@ -149,9 +171,21 @@ div.front-top img {
     object-fit: contain;
 }
 
+.projeto {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+}
 
-/* CONTATO: estilos */
+.projeto img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+/* CARDS DO PORTFÓLIO: fim */
 
+
+/* CONTATO: início */
 .contact-section {
     margin-bottom: 100px;
 }
@@ -162,4 +196,45 @@ section.contact-section ul {
 
 hr {
     border: 1px solid var(--cor2);
+}
+/* CONTATO: fim */
+
+
+/* MEDIA QUERIES */
+@media (max-width: 800px) {
+    .grid-container-portfolio {
+        grid-template-columns: auto;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not([class=active]) { /* :first-child */
+        display: none;
+    }
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .responsive {
+        position: fixed;
+    }
+    .topnav.responsive {
+      /*position: fixed;
+      top: 0;
+      left: 0;*/
+      width: 100%;
+    }
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
 }
